--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/shivasish-mahapatra-8822a51a2/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/AmanMahapatra1">Twitter</a>
-    <a class="footer-link" href="https://www.instagram.com/jin_jackle/">Instagram</a>
+   <!-- <a class="footer-link" href="https://www.instagram.com/jin_jackle/">Instagram</a> -->
     <p class="copyright">© 2021 shivasish mahapatra@mahapatraskm05.</p>
   </div>
 
